--- a/appspec.yml
+++ b/appspec.yml
@@ -1,18 +1,14 @@
 version: 0.0
-os: linux 
+os: linux
 files:
-  - source: /
-    destination: /home/ubuntu/nodejs
-hooks:
-  BeforeInstall:
-    - location: /before_install.sh
-      timeout: 300
-      runas: ubuntu
-  AfterInstall:
-    - location: /after_install.sh
-      timeout: 300
-      runas: ubuntu
-  ApplicationStart:
-    - location: /application_start.sh
-      timeout: 300
-      runas: ubuntu
+  - source: /index.html
+    destination: /var/www/html/
+file_exists_behavior: OVERWRITE
+BeforeInstall:
+  - location: /before_script.sh
+    timeout: 300
+    runas: root
+ApplicationStop:
+  - location: /after_script.sh
+    timeout: 300
+    runas: root
